kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
spec:
  ingressClassName: nginx
  rules:
    - host: homework.otus
      http:
        paths:
          - pathType: Prefix
            path: /homepage
            backend:
              service:
                name: homework-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: homework-service
                port:
                  number: 80
